--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "integrador",
+  "name": "form-angular",
   "version": "1.0.0",
   "description": "Proyecto integrador AngularJS",
   "scripts": {
@@ -10,13 +10,15 @@
     "prestart": "npm install",
     "start": "http-server ./app -a localhost -p 8000 -c-1"
   },
-  "author": "juyagu",
+  "author": "Enzo",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.8",
     "angular-css-injector": "^1.0.4",
     "bootstrap": "^3.3.7",
     "cpx": "^1.5.0",
+    "minimist": ">=0.2.1",
     "http-server": "^0.11.1"
   }
 }
+
