--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "author": "Enzo",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.7.8",
+    "angular": ">=1.7.9",
     "angular-css-injector": "^1.0.4",
-    "bootstrap": "^3.3.7",
+    "bootstrap": ">=3.4.1",
+    "braces": ">=2.3.1",
     "cpx": "^1.5.0",
+    "ecstatic": ">=3.3.2",
+    "http-server": "^0.12.3",
     "minimist": ">=0.2.1",
-    "http-server": "^0.11.1"
+    "mixin-deep": ">=1.3.2",
+    "qs": ">=6.0.4",
+    "set-value": ">=2.0.1"
   }
 }
-
